# Herbal-Alchemy

./: Cargo.toml  README.md  index.html  potion.effects  potions.txt
.github/workflows/: release.yaml
assets/blend/: PalmTree.blend  PalmTree.blend1  plant.blend  plant.blend1
assets/objs/: Island.wfo.mtl  Palm.mtl  water.mtl  water.wfo
assets/shaders/: pbr.wgsl
assets/ui/: color-picker.ess
assets/waves/: Empty.mtl
src/: audio.rs  crafting.rs  lib.rs  loading.rs  main.rs  menu.rs  mesh.rs  msg_event.rs  player.rs  settings.rs  shader.rs  tabs.rs  tool_tips.rs  toolbar.rs  utils.rs
src/crafting/: mod.rs  potions.rs  tags.rs
src/inventory/: mod.rs
src/map/: ids.rs  mod.rs
src/mesh/: islands.rs  mod.rs
src/plants/: Palm.rs  mod.rs  palm.rs
src/ui/: inventory.rs  menu.rs  mod.rs  shop.rs
