[package]
name = "herbal-alchemy"
version = "0.1.0"
publish = false
authors = ["Phaestus Fox"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/filesystem_watcher",
    "bevy/tonemapping_luts"
]

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.15" }
rand = { version = "0.8.3" }
bevy_wave_collapse = {git = "https://github.com/PhaestusFox/bevy_wave_collapse.git"}
serde = "*"
bevy_pkv = "*"
fixed = "*"
bevy_editor_pls = "*"
bevy-inspector-egui = "*"
uuid = "*"
strum = "*"
strum_macros = "*"
bevy_mod_picking = "*"
bevy_ninepatch = "*"
thiserror = "*"
bevy_console = "*"
clap = "*"
indexmap = "*"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
